<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.springframework.data.examples</groupId>
	<artifactId>spring-data-examples</artifactId>
	<version>1.0.0.DATACMNS-1033-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Spring Data - Examples</name>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.3.RELEASE</version>
	</parent>

	<modules>
		<module>bom</module>
		<module>jpa</module>
	</modules>

	<properties>

		<apt.version>1.1.3</apt.version>
		<java.version>1.8</java.version>
		<hsqldb.version>2.4.0</hsqldb.version>
	</properties>

	<profiles>
		<profile>
			<id>spring5</id>
			<properties>
				<spring.version>5.0.0.M3</spring.version>
			</properties>
		</profile>
		<profile>
			<id>jdk9</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-toolchains-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<goals>
									<goal>toolchain</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<toolchains>
								<jdk>
									<version>9</version>
									<vendor>oracle</vendor>
								</jdk>
							</toolchains>
						</configuration>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.6.1</version>
						<configuration>
							<source>${java.version}</source>
							<target>${java.version}</target>
							<fork>true</fork>
							<compilerArgs>
								<arg>-parameters</arg>
								<arg>-J--permit-illegal-access</arg>
							</compilerArgs>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.20</version>
						<configuration>
							<argLine>--permit-illegal-access --add-modules java.xml.bind
							</argLine><!-- this makes the test pass, but we actually want a state where this is not needed-->
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<developers>
		<developer>
			<id>ogierke</id>
			<name>Oliver Gierke</name>
			<email>ogierke@pivotal.io</email>
		</developer>
		<developer>
			<id>tdarimont</id>
			<name>Thomas Darimont</name>
			<email>tdarimont@gopivotal.io</email>
		</developer>
		<developer>
			<id>cstrobl</id>
			<name>Christoph Strobl</name>
			<email>cstrobl@pivotal.io</email>
		</developer>
		<developer>
			<id>gturnquist</id>
			<name>Greg Turnquist</name>
			<email>gturnquist@pivotal.io</email>
		</developer>
		<developer>
			<id>mpaluch</id>
			<name>Mark Paluch</name>
			<email>mpaluch@pivotal.io</email>
		</developer>
	</developers>

	<dependencies>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- Test dependencies -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>1.1</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>1.8</version>
							<vendor>oracle</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>

	</build>

	<repositories>
	    <repository>
	        <id>spring-libs-snapshot</id>
	        <url>https://repo.spring.io/libs-snapshot</url>
	    </repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-libs-snapshot</id>
			<url>https://repo.spring.io/libs-snapshot</url>
		</pluginRepository>
	</pluginRepositories>

</project>
